--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "engines": {
     "node": ">=15.0.0"
   },
-  "files": ["src", "types"],
+  "files": [
+    "src",
+    "types"
+  ],
   "publishConfig": {
     "access": "restricted",
     "registry": "https://npm.pkg.github.com"
@@ -25,7 +28,10 @@
     "mocha:unit": "mocha --no-timeouts --exit --color 'test/unit/*.test.js'",
     "watch:mocha:unit": "npm-watch mocha:unit"
   },
-  "keywords": ["javascript", "nodejs"],
+  "keywords": [
+    "javascript",
+    "nodejs"
+  ],
   "author": "Gil Tayar <giltayar@roundforest.com>",
   "license": "MIT",
   "repository": {
@@ -33,7 +39,6 @@
     "directory": "packages/promise-patterns",
     "type": "git"
   },
-  "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.16.0",
     "@babel/eslint-parser": "^7.16.0",
@@ -43,6 +48,7 @@
     "@types/chai-subset": "^1.3.3",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.11.6",
+    "@types/node-fetch": "^3.0.3",
     "chai": "^4.3.4",
     "chai-subset": "^1.6.0",
     "concurrently": "^6.3.0",
@@ -55,5 +61,8 @@
     "prettier": "^2.4.1",
     "prettier-plugin-jsdoc": "^0.3.24",
     "typescript": "^4.4.4"
+  },
+  "dependencies": {
+    "node-fetch": "^3.0.0"
   }
 }
