--- a/package.json
+++ b/package.json
@@ -56,7 +56,9 @@
     "eslint-plugin-mocha-no-only": "^1.1.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "execa": "^5.1.1",
     "mocha": "^9.1.3",
+    "mocha-chai-jest-snapshot": "^1.1.3",
     "npm-watch": "^0.11.0",
     "prettier": "^2.4.1",
     "prettier-plugin-jsdoc": "^0.3.24",
