--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "typescript": "^4.4.4"
   },
   "dependencies": {
-    "node-fetch": "^3.0.0"
+    "node-fetch": "^3.0.0",
+    "throat": "^6.0.1"
   }
 }
